--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -2,7 +2,7 @@
   <div class="row mt-5">
     <div class="col"></div>
     <div class="col-4">
-      <div class="card-shadow">
+      <div class="card shadow">
         <div class="card-body">
 
           <form>
@@ -10,19 +10,24 @@
               <h3 class="text-dark text-muted">Register</h3>
             </div>
             <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email</label>
-              <input type="email" class="form-control" name="email" [(ngModel)="email"]>
+              <label class="form-label">Email</label>
+              <input type="email" class="form-control" name="email" [(ngModel)]="email" >
             </div>
             <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Password</label>
+              <label class="form-label">Password</label>
               <input type="password" class="form-control" name="password" [(ngModel)]="password">
             </div>
             <button type="button" class="btn btn-info" (click)="register()">Register</button>
             <div class="row">
               <div class="col-md-6">
-                <a href="/login" style="text-decoration: none;"> Already have an account? <span class="text-danger">Login</span></a>
-                <div class="col-md-6">
-                </div>
+                <a href="/login" style="text-decoration: none;"> Already have account?
+                  <span class="text-danger col-md-6">Login</span>
+                </a>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <a href="" class="text-dark" style="text-decoration: none;">Forget Password ?</a>
               </div>
             </div>
           </form>
@@ -33,3 +38,5 @@
     <div class="col"></div>
   </div>
 </div>
+
+
