--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -27,7 +27,7 @@
             </div>
             <div class="row">
               <div class="col-md-6">
-                <a href="" class="text-dark" style="text-decoration: none;">Forget Password ?</a>
+                <a href="/forgot-password" class="text-dark" style="text-decoration: none;">Forget Password ?</a>
               </div>
             </div>
           </form>
