--- a/src/app/component/verify-email/verify-email.component.html
+++ b/src/app/component/verify-email/verify-email.component.html
@@ -7,8 +7,9 @@
           <div class="mb-3">
           <h3 class="text-muted">Welcome</h3>
           </div>
-          <div class="col">
-            <button class="btn btn-primary" type="button" (click)="signout()">Logout</button>
+          <div class="mb-3">
+            <h3>Link has sent on your registered email</h3>
+            <p class="mt-2">Please verify email</p>
           </div>
         </div>
       </div>
