--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -19,14 +19,13 @@
             </div>
             <button type="button" class="btn btn-info" (click)="register()">Register</button>
             <div class="row">
-              <div class="col-md-6">
-                <a href="/login" style="text-decoration: none;"> Already have account?
-                  <span class="text-danger col-md-6">Login</span>
-                </a>
+              <div class="col-md-6 mt-3">
+                  <a href="/login" style="text-decoration: none;"><button type="button" class="btn btn-primary">Back to Login</button></a>
+
               </div>
             </div>
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-6 mt-2">
                 <a href="" class="text-dark" style="text-decoration: none;">Forget Password ?</a>
               </div>
             </div>
