--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
       <div class="card shadow">
         <div class="card-body">
           <div class="mb-3">
-          <h3 class="text-muted">Welcome</h3>
+          <h3 class="text-muted">Welcome to Dashboard</h3>
           </div>
           <div class="col">
             <button class="btn btn-primary" type="button" (click)="signout()">Logout</button>
