--- a/src/app/component/verify-email/verify-email.component.html
+++ b/src/app/component/verify-email/verify-email.component.html
@@ -10,6 +10,7 @@
           <div class="mb-3">
             <h3>Link has sent on your registered email</h3>
             <p class="mt-2">Please verify email</p>
+            <a href="/login"><button type="button" class="btn btn-primary">Back to Login</button></a>
           </div>
         </div>
       </div>
