--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -4,7 +4,6 @@
     <div class="col-4">
       <div class="card shadow">
         <div class="card-body">
-
           <form>
             <div class="mb-3">
               <h3 class="text-dark text-muted">Login</h3>
@@ -19,20 +18,26 @@
             </div>
             <button type="button" class="btn btn-info" (click)="login()">Login</button>
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-6 mt-3">
                 <a href="/register" style="text-decoration: none;" class="text-danger"> No Account?
                   <span class="text-primary col-md-6">Click Here</span>
                 </a>
               </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-6 mt-3">
                 <a href="/forgot-password" class="text-dark" style="text-decoration: none;">Forget Password ?</a>
+              </div>
+
+              <div class="row mt-3">
+                <a (click)="signInWithGoogle()" style="text-decoration: none;">
+                  <div class="card shadow text-center">
+                    <div class="card-body">
+                      <img src="https://cdn5.vectorstock.com/i/1000x1000/75/54/google-logo-vector-28387554.jpg" alt="" height="24px" width="24px"> Sign in with Google
+                    </div>
+                  </div>
+                </a>
               </div>
             </div>
           </form>
-
-
         </div>
       </div>
     </div>
